[package]
name = "smart-ble-tauri"
version = "1.0.0"
description = "SmartBLE Desktop - Tauri"
authors = ["SmartBLE"]
edition = "2021"

[lib]
name = "smart_ble_tauri"
crate-type = ["cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [ "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# BLE dependencies (platform-specific)
[target.'cfg(target_os = "windows)".dependencies]
btleplug = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
btleplug = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
btleplug = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
