[package]
name = "smart-ble-tauri"
version = "1.0.0"
description = "SmartBLE Desktop - Tauri"
authors = ["SmartBLE"]
edition = "2021"

[lib]
name = "smart_ble_tauri"
crate-type = ["cdylib", "staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [ "dialog-message", "dialog-open", "dialog-save", "dialog-confirm", "dialog-ask", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
futures = "0.3"  # for StreamExt used in peripheral.notifications() stream
btleplug = "0.11" # cross-platform BLE: Windows (WinRT) / macOS (CoreBluetooth) / Linux (BlueZ)

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
